2001-05-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Fixes to last modifications - provided by
	Chris B Vetter.
	* Source/NSString.m: Fix memory allocation of a unichar buffer to
	correct size.
	* Source/NSPipe.m: Log an error if we can't open a new pipe.
	* Source/NSTask.m: Slight tidyup

2001-05-04  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSObject.m (GSGetValue): Call handleQueryWithUnboundKey:
	rather than handleTakeValue:forUnboundKey: when no property
	binding is found.

2001-05-04  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.in: Abort if GNUSTEP_SYSTEM_ROOT is empty, printing a
	message saying that you must run the GNUstep configuration script
	before configuring the base library.
	* configure: Regenerated.

2001-05-04  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/objc-gnu2next.h: Add arglist_h def. Add
	encoding functions defs.
	* Source/mframe.m: Include stdio and ctype.
	* Source/mframe/mframe.foot (mframe_arg_addr): Use marg_getRef if
	NeXT_RUNTIME.

2001-05-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDate.m: GSTimeNow() remove volatile typespec and move
	initialisation of interval in the hope of fixing a problem with
	float operations.  In any case, the code is tidier.
	* Tools/gdomap.c: If started as root, try to become user nobody
	before resorting to uid -2 (like NFS).

2001-05-03  Adam Fedor  <fedor@gnu.org>

	* configure.in: Don't use -lobjc with NeXT_RUNTIME. Check for -lm.

	* Headers/gnustep/base/objc-gnu2next.h: Add sel_register_name
	* Source/behavior.m: Add define hacks for Darwin.

2001-05-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject: ([+initialize]) Move GSSetLocale() after platform
	specific code with conditionally compiled variable declarations.
	Should make this work on BSD and MINGW again.

2001-05-02  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Source/NSObject.m ([NSObject +initialize]): fixed a FreeBSD specific
	code bug introduced by the call of GSSetLocaleC().